Do AdjustOffsetsForBidi after RemoveBidiContinuation so that we have up-to-date information about which continuations are fluid and which are non-fluid. Bug 397961, r=uriber, sr+blocking1.9=roc